--- a/mobileSoftware/finalReport_02_20220803/app/src/main/res/layout/activity_update.xml
+++ b/mobileSoftware/finalReport_02_20220803/app/src/main/res/layout/activity_update.xml
@@ -5,135 +5,143 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="오늘의 일기"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="355dp"
-        android:layout_height="143dp"
-        android:layout_marginTop="48dp"
+        android:id="@+id/imageView2"
+        android:layout_width="146dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/image" />
+        app:srcCompat="@drawable/boring" />
 
     <TextView
-        android:id="@+id/tvInputTitle"
+        android:id="@+id/tvUpdateTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:text="제목"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <EditText
-        android:id="@+id/etInputTitle"
-        android:layout_width="150dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="제목을 입력하세요."
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvInputTitle" />
-
-    <TextView
-        android:id="@+id/tvInputDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="36dp"
-        android:text="오늘의 날짜?"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etInputTitle" />
-
-    <EditText
-        android:id="@+id/etInputDate"
-        android:layout_width="152dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="날짜를 입력하세요. "
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvInputDate" />
-
-    <TextView
-        android:id="@+id/tvInputFeeling"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="28dp"
-        android:text="오늘의 기분은?"
-        app:layout_constraintStart_toEndOf="@+id/tvInputTitle"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <TextView
-        android:id="@+id/tvInputText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="12dp"
-        android:text="일기"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etInputDate" />
-
-    <EditText
-        android:id="@+id/etInputText"
-        android:layout_width="340dp"
-        android:layout_height="132dp"
+        android:id="@+id/etUpdateTitle"
+        android:layout_width="119dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text"
-        android:text="오늘 있었던 일을 입력하세요."
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvUpdateTitle" />
+
+    <TextView
+        android:id="@+id/tvUpdateDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="날짜"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateTitle" />
+
+    <EditText
+        android:id="@+id/etUpdateDate"
+        android:layout_width="114dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvUpdateDate" />
+
+    <TextView
+        android:id="@+id/tvUpdateFeeling"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="32dp"
+        android:text="감정"
+        app:layout_constraintStart_toEndOf="@+id/tvUpdateTitle"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/tvUpdateText"
+        android:layout_width="100dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="48dp"
+        android:text="오늘의일기"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateDate" />
+
+    <EditText
+        android:id="@+id/etUpdateText"
+        android:layout_width="280dp"
+        android:layout_height="142dp"
+        android:layout_marginTop="68dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.394"
+        app:layout_constraintHorizontal_bias="0.274"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvInputText" />
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateDate" />
 
     <Button
-        android:id="@+id/btAdd"
-        android:layout_width="188dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="16dp"
-        android:text="추가"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etInputText" />
-
-    <Button
-        android:id="@+id/btCancel"
-        android:layout_width="183dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="4dp"
+        android:id="@+id/btUpdate"
+        android:layout_width="145dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="4dp"
-        android:text="취소"
+        android:text="Button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateText" />
+
+    <Button
+        android:id="@+id/btUpdateCancel"
+        android:layout_width="159dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="12dp"
+        android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.571"
-        app:layout_constraintStart_toEndOf="@+id/btAdd"
-        app:layout_constraintTop_toBottomOf="@+id/etInputText" />
+        app:layout_constraintStart_toEndOf="@+id/btUpdate"
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateText" />
+
+    <TextView
+        android:id="@+id/etUpdateId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="56dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextText"
+        android:layout_width="78dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etUpdateId" />
 
     <RadioGroup
-        android:id="@+id/rgAddFeeling"
-        android:layout_width="190dp"
-        android:layout_height="170dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="28dp"
+        android:id="@+id/rgUpdateFeeling"
+        android:layout_width="213dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintStart_toEndOf="@+id/etInputTitle"
-        app:layout_constraintTop_toBottomOf="@+id/tvInputFeeling">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/etUpdateTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvUpdateFeeling">
 
         <TableRow
             android:layout_width="match_parent"
@@ -151,6 +159,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="false"
                 android:text="sad" />
 
         </TableRow>
